fixed overflow on loading screen

--- a/src/components/loading/loading.styles.css
+++ b/src/components/loading/loading.styles.css
@@ -29,14 +29,19 @@
     left:50%;
     transform: translate(-50%,-50%);
     justify-content: center;
-    align-items: center;    
+    align-items: center; 
+    padding-top: 150px;   
+    padding-left: 10px;
+    padding-right: 10px;
+    max-width: 100%;
+    width: 500px;
 }
 .loading-module img{   
-    max-width: 400px;
+    max-width: 95%;
 }
 .ball-loader span{
     display: inline-block;   
-    font-size: 25px;
+    font-size: 1.25rem;
     font-weight: bolder;   
     margin:20px 10px;
    
